<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lizard Eye</string>
    <string name="help">Help</string>
    <string name="points">Points</string>
    <string name="crash_toast_text">Crash Report Send to Developer</string>
    <!-- <string name="admob_id">a1535e31d5a5b99</string> -->
    <string name="admob_id">ca-app-pub-5767288438150757/6433454222</string>
    <string name="world_menu_aztechworld">world_menu_aztechworld</string>
    <string name="world_menu_ballworld">world_menu_ballworld</string>
    <string name="world_menu_bruceworld">world_menu_bruceworld</string>
    <string name="world_menu_christworld">world_menu_christworld</string>
    <string name="world_menu_mexicoworld">world_menu_mexicoworld</string>
    <string name="world_menu_moneyworld">world_menu_moneyworld</string>
    <string name="world_menu_mythworld">world_menu_mythworld</string>
    <string name="world_menu_roboworld">world_menu_roboworld</string>
    <string name="world_menu_sportsworld">world_menu_sportsworld</string>
    <string name="world_menu_stickworld">world_menu_stickworld</string>
    <string name="world_menu_treeworld">world_menu_treeworld</string>
    <string name="world_menu_zodiacworld">world_menu_zodiacworld</string>
    <string name="go">Go</string>
    <string name="level">Level</string>
    <string name="time">Time</string>
    <string name="zero">0</string>
    <string name="firstlevelcomplted">First Level Completed</string>
    <string name="secondlevelcomplted">Second Level Completed</string>
    <string name="thirdlevelcomplted">Third Level Completed</string>
    <string name="fourthlevelcomplted">Fourth Level Completed</string>
    <string name="fifthlevelcomplted">Fifth Level Completed</string>
    <string name="dialog_title">Rate %s</string>
    <string name="rate_message">If you enjoy using Lizard Eye, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate">Rate Now</string>
    <string name="later">Later</string>
    <string name="no_thanks">No thanks</string>
    <string name="share">Share</string>
    <string name="firstlevel">First Level</string>
    <string name="secondlevel">Second Level</string>
    <string name="thirdlevel">Third Level</string>
    <string name="fourthlevel">Fourth Level</string>
    <string name="fifthlevel">Fifth Level</string>
    <string name="wronganswer">Sorry that was a wrong answer,the correct answer is highlighted in Black Color</string>
    <string name="replay">Replay</string>
    <string name="time2play">Complete Level 2 in Time Challenge</string>
    <string name="time3play">Complete Level 3 in Time Challenge</string>
    <string name="time4play">Complete Level 4 in Time Challenge</string>
    <string name="time5play">Complete Level 5 in Time Challenge</string>
    <string name="timemode">Time Mode</string>
    <string name="relaxmode">Relax Mode</string>
    <string name="worldmode">World Mode</string>
    <string name="noofattempts">No of Attempts</string>
    <string name="noofanswers">No of Correct Answers</string>
    <string name="correctanswerpert">Correct Answer %</string>
    <string name="totalaverageattempttime">Average Time for Each Attempt in seconds</string>
    <string name="totalaverageanswertime">Average Time for Correct Answer in seconds</string>
    <string name="totalpointswon">Total Points Won</string>
    <string name="pointswonintimemode">Points Won in Time Mode</string>
    <string name="pointswoninworldmode">Points Won in World Mode</string>
	<string name="installfromplaystore">Install Lizard Eye From Play Store </string>
	 <string name="lizardshare">Lizard Eye Share</string>
</resources>