<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/points_padding" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/correctanswerpert"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />

            <TextView
                android:id="@+id/my_view_textansper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/points_padding" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/noofattempts"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />

            <TextView
                android:id="@+id/my_view_textattempts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/points_padding" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/noofanswers"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />

            <TextView
                android:id="@+id/my_view_textanswers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/points_padding" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/pointswoninworldmode"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />

            <TextView
                android:id="@+id/my_view_textworldmodepoints"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/points_padding" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/totalpointswon"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />

            <TextView
                android:id="@+id/my_view_texttotalpoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:textColor="@color/brown"
                android:textSize="@dimen/points_text_size" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>